[package]
name = "janus_collector"
description = "Collector for Janus, the server powering ISRG's Divvi Up."
documentation = "https://docs.rs/janus_collector"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
fpvec_bounded_l2 = ["dep:fixed", "janus_core/fpvec_bounded_l2", "prio/experimental"]
test-util = []

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
chrono.workspace = true
derivative.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
fixed = { version = "1.26", optional = true }
prio.workspace = true
rand = { workspace = true, features = ["min_const_gen"] }
reqwest = { version = "0.11.25", default-features = false, features = ["rustls-tls", "json"] }
retry-after = "0.4.0"
thiserror.workspace = true
tokio.workspace = true
tracing = "0.1.40"
url = "2.5.0"
serde = { workspace = true }
hpke-dispatch = { version = "0.5.1", features = ["serde"] }
serde_json.workspace = true

[dev-dependencies]
assert_matches.workspace = true
base64.workspace = true
fixed-macro = "1.1.1"
janus_collector = { path = ".", features = ["fpvec_bounded_l2", "test-util"] }
janus_core = { workspace = true, features = ["fpvec_bounded_l2", "test-util"] }
mockito = "1.4.0"
