[package]
name = "janus_collector"
description = "Collector for Janus, the server powering ISRG's Divvi Up."
documentation = "https://docs.rs/janus_collector"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
fpvec_bounded_l2 = ["dep:fixed", "janus_core/fpvec_bounded_l2", "prio/experimental"]
test-util = []

[dependencies]
backoff = { workspace = true, features = ["tokio"] }
chrono.workspace = true
educe.workspace = true
fixed = { workspace = true, optional = true }
hpke-dispatch = { workspace = true, features = ["serde"] }
janus_core.workspace = true
janus_messages.workspace = true
mime.workspace = true
prio.workspace = true
rand = { workspace = true, features = ["min_const_gen"] }
reqwest = { workspace = true, features = ["json"] }
retry-after = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches.workspace = true
base64.workspace = true
janus_collector = { workspace = true, features = ["fpvec_bounded_l2", "test-util"] }
janus_core = { workspace = true, features = ["fpvec_bounded_l2", "test-util"] }
mockito = { workspace = true }
