[package]
name = "janus_collector"
description = "Collector for Janus, the server powering ISRG's Divvi Up."
documentation = "https://docs.rs/janus_collector"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
test-util = []

[dependencies]
anyhow.workspace = true
backon = { workspace = true }
chrono.workspace = true
educe.workspace = true
hpke-dispatch = { workspace = true, features = ["serde"] }
janus_core.workspace = true
janus_messages.workspace = true
mime.workspace = true
prio.workspace = true
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
retry-after = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_matches.workspace = true
base64.workspace = true
janus_collector = { workspace = true, features = ["test-util"] }
janus_core = { workspace = true, features = ["test-util"] }
mockito = { workspace = true }
