[package]
name = "janus_core"
description = "Core type definitions and utilities used in various components of Janus."
documentation = "https://docs.rs/janus_core"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
fpvec_bounded_l2 = ["dep:fixed", "prio/experimental"]
test-util = [
    "dep:assert_matches",
    "dep:k8s-openapi",
    "dep:serde_json",
    "dep:stopper",
    "dep:tempfile",
    "dep:testcontainers",
    "dep:tokio-stream",
    "dep:tracing-log",
    "dep:tracing-subscriber",
    "kube/ws",
    "tokio/macros",
    "tokio/sync",
]

[dependencies]
anyhow.workspace = true
assert_matches = { version = "1", optional = true }
backoff = { version = "0.4.0", features = ["tokio"] }
base64.workspace = true
chrono = { workspace = true, features = ["clock"] }
derivative.workspace = true
fixed = { version = "1.24", optional = true }
futures = "0.3.28"
hex = "0.4"
hpke-dispatch = { version = "0.5.1", features = ["serde"] }
http = "0.2.9"
http-api-problem = "0.57.0"
janus_messages.workspace = true
kube = { workspace = true, optional = true, features = ["rustls-tls"] }
k8s-openapi = { workspace = true, optional = true }
prio.workspace = true
rand = "0.8"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }
ring = "0.17.5"
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_yaml.workspace = true
stopper = { version = "0.2.2", optional = true }
tempfile = { version = "3", optional = true }
testcontainers = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tokio-stream = { version = "0.1.14", features = ["net"], optional = true }
tracing = "0.1.40"
tracing-log = { version = "0.1.4", optional = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"], optional = true }
trillium.workspace = true
url = "2.4.1"

[dev-dependencies]
fixed = "1.24"
hex = { version = "0.4", features = ["serde"] }  # ensure this remains compatible with the non-dev dependency
janus_core = { path = ".", features = ["test-util"] }
mockito = "1.2.0"
rstest.workspace = true
serde_test.workspace = true
