[package]
name = "janus_core"
description = "Core type definitions and utilities used in various components of Janus."
documentation = "https://docs.rs/janus_core"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
fpvec_bounded_l2 = ["dep:fixed", "prio/experimental"]
test-util = [
    "dep:assert_matches",
    "dep:k8s-openapi",
    "dep:quickcheck",
    "dep:serde_json",
    "dep:stopper",
    "dep:tempfile",
    "dep:testcontainers",
    "dep:tokio-stream",
    "dep:tracing-log",
    "dep:tracing-subscriber",
    "kube/ws",
    "prio/test-util",
    "tokio/macros",
    "tokio/sync",
]

[dependencies]
anyhow.workspace = true
assert_matches = { workspace = true, optional = true }
backoff = { workspace = true, features = ["tokio"] }
base64.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["clock"] }
clap.workspace = true
derivative.workspace = true
fixed = { workspace = true, optional = true }
futures = { workspace = true }
hex = { workspace = true }
hpke-dispatch = { workspace = true, features = ["serde"] }
http.workspace = true
http-api-problem.workspace = true
janus_messages.workspace = true
k8s-openapi = { workspace = true, optional = true }
kube = { workspace = true, optional = true, features = ["rustls-tls"] }
prio = { workspace = true, default-features = true, features = ["experimental"] }
quickcheck = { workspace = true, optional = true }
rand.workspace = true
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
ring = { workspace = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_yaml.workspace = true
stopper = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
testcontainers = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tokio-stream = { workspace = true, features = ["net"], optional = true }
tracing = { workspace = true }
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["std", "env-filter", "fmt"], optional = true }
trillium.workspace = true
url = { workspace = true }

[dev-dependencies]
fixed = { workspace = true }
hex = { workspace = true, features = ["serde"] }  # ensure this remains compatible with the non-dev dependency
janus_core = { path = ".", features = ["test-util"] }
mockito = { workspace = true }
rstest.workspace = true
rustls.workspace = true
serde_test.workspace = true
trillium-testing.workspace = true
