[package]
name = "janus_core"
description = "Core type definitions and utilities used in various components of Janus."
documentation = "https://docs.rs/janus_core"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
fpvec_bounded_l2 = ["prio/experimental"]
test-util = [
    "dep:assert_matches",
    "dep:lazy_static",
    "dep:k8s-openapi",
    "dep:serde_json",
    "dep:stopper",
    "dep:tempfile",
    "dep:testcontainers",
    "dep:tokio-stream",
    "dep:tracing-log",
    "dep:tracing-subscriber",
    "kube/ws",
    "tokio/macros",
    "tokio/sync",
]

[dependencies]
anyhow.workspace = true
assert_matches = { version = "1", optional = true }
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
chrono = { workspace = true, features = ["clock"] }
derivative.workspace = true
futures = "0.3.30"
hex = "0.4"
hpke-dispatch = { version = "0.6.0", features = ["serde"] }
http.workspace = true
http-api-problem.workspace = true
janus_messages.workspace = true
kube = { workspace = true, optional = true, features = ["rustls-tls"] }
k8s-openapi = { workspace = true, optional = true }
lazy_static = { version = "1", optional = true }
prio.workspace = true
rand = "0.8"
reqwest = { workspace = true, features = ["json"] }
ring = "0.17.8"
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_yaml.workspace = true
stopper = { version = "0.2.8", optional = true }
tempfile = { version = "3", optional = true }
testcontainers = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tokio-stream = { version = "0.1.15", features = ["net"], optional = true }
tracing = "0.1.40"
tracing-log = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"], optional = true }
trillium.workspace = true

[dev-dependencies]
fixed = "1.27"
hex = { version = "0.4", features = ["serde"] }  # ensure this remains compatible with the non-dev dependency
janus_core = { path = ".", features = ["test-util"] }
kube.workspace = true
mockito = "1.4.0"
rstest.workspace = true
serde_test.workspace = true
url = "2.5.1"
