[package]
name = "janus_integration_tests"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
in-cluster = ["dep:k8s-openapi", "dep:kube"]
testcontainer = ["janus_interop_binaries/testcontainer"]
in-cluster-rate-limits = []
ohttp = []

[dependencies]
anyhow.workspace = true
assert_matches.workspace = true
axum.workspace = true
backon = { workspace = true }
base64.workspace = true
clap.workspace = true
futures = { workspace = true }
hex = { workspace = true }
http.workspace = true
itertools.workspace = true
janus_aggregator = { workspace = true, features = ["test-util"] }
janus_aggregator_core = { workspace = true, features = ["test-util"] }
janus_client = { workspace = true, features = ["ohttp"] }
janus_collector.workspace = true
janus_core = { workspace = true, features = ["test-util"] }
janus_interop_binaries = { workspace = true, features = ["test-util"] }
janus_messages.workspace = true
k8s-openapi = { workspace = true, optional = true }
kube = { workspace = true, optional = true }
prio = { workspace = true, features = ["test-util"] }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json = { workspace = true }
testcontainers.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
divviup-client = { workspace = true, features = ["admin"] }
educe.workspace = true
janus_collector = { workspace = true, features = ["test-util"] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
quickcheck.workspace = true
regex.workspace = true
rstest.workspace = true
rustls.workspace = true
tempfile = { workspace = true }
tracing.workspace = true
# TODO(divviup/divviup-api#...): Remove once divviup-client is migrated off Trillium.
trillium-rustls.workspace = true
# trillium-tokio must remain at 0.4.x to match divviup-client's trillium-server-common 0.5.x stack.
trillium-tokio = "0.5"
