[package]
name = "janus_interop_binaries"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
fpvec_bounded_l2 = ["dep:fixed", "dep:fixed-macro", "janus_core/fpvec_bounded_l2", "janus_aggregator/fpvec_bounded_l2", "prio/experimental"]
test-util = [
    "dep:hex",
    "dep:futures",
    "dep:lazy_static",
    "dep:regex",
    "dep:zstd",
]
testcontainer = [
    "dep:janus_build_script_utils",
    "test-util",
]

[dependencies]
anyhow.workspace = true
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.21.5"
clap = "4.4.8"
derivative.workspace = true
futures = { version = "0.3.29", optional = true }
fixed = { version = "1.24", optional = true }
fixed-macro = { version = "1.1.1", optional = true }
hex = { version = "0.4", optional = true }
lazy_static = { version = "1", optional = true }
janus_aggregator_core.workspace = true
janus_aggregator.workspace = true
janus_client.workspace = true
janus_collector.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
opentelemetry.workspace = true
prio.workspace = true
rand = "0.8"
regex = { version = "1", optional = true }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
ring = "0.17.5"
serde.workspace = true
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
testcontainers.workspace = true
tokio.workspace = true
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"] }
trillium.workspace = true
trillium-api.workspace = true
trillium-router.workspace = true
trillium-tokio.workspace = true
url = { version = "2.5.0", features = ["serde"] }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
janus_interop_binaries = { path = ".", features = ["fpvec_bounded_l2", "testcontainer", "test-util"] }
janus_core = { workspace = true, features = ["test-util", "fpvec_bounded_l2"] }
reqwest = { version = "0.11.22", default-features = false, features = ["json"] }

[build-dependencies]
janus_build_script_utils = { workspace = true, optional = true }
