[package]
name = "janus_interop_binaries"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
fpvec_bounded_l2 = ["dep:fixed", "janus_core/fpvec_bounded_l2", "janus_aggregator/fpvec_bounded_l2", "prio/experimental"]
test-util = [
    "dep:hex",
    "dep:futures",
    "dep:regex",
    "dep:zstd",
]
testcontainer = ["test-util"]

[dependencies]
anyhow.workspace = true
backoff = { version = "0.4", features = ["tokio"] }
base64.workspace = true
clap.workspace = true
derivative.workspace = true
futures = { version = "0.3.30", optional = true }
fixed = { version = "1.27", optional = true }
hex = { version = "0.4", optional = true }
janus_aggregator_core = { workspace = true, features = ["test-util"] }
janus_aggregator.workspace = true
janus_client.workspace = true
janus_collector.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
opentelemetry.workspace = true
prio.workspace = true
rand.workspace = true
regex = { version = "1", optional = true }
reqwest.workspace = true
ring = "0.17.8"
serde.workspace = true
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
testcontainers.workspace = true
tokio.workspace = true
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"] }
trillium.workspace = true
trillium-api.workspace = true
trillium-router.workspace = true
trillium-tokio.workspace = true
url.workspace = true
zstd = { version = "0.13", optional = true }

[dev-dependencies]
fixed-macro = "1.1.1"
janus_interop_binaries = { path = ".", features = ["fpvec_bounded_l2", "test-util"] }
janus_core = { workspace = true, features = ["test-util", "fpvec_bounded_l2"] }
reqwest = { workspace = true, features = ["json"] }
