[package]
name = "janus_interop_binaries"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
fpvec_bounded_l2 = ["dep:fixed", "janus_core/fpvec_bounded_l2", "janus_aggregator/fpvec_bounded_l2", "prio/experimental"]
test-util = [
    "dep:hex",
    "dep:regex",
]
testcontainer = ["test-util"]

[dependencies]
anyhow.workspace = true
backoff = { workspace = true, features = ["tokio"] }
base64.workspace = true
clap.workspace = true
educe.workspace = true
fixed = { workspace = true, optional = true }
futures = { workspace = true }
hex = { workspace = true, optional = true }
janus_aggregator.workspace = true
janus_aggregator_core = { workspace = true, features = ["test-util"] }
janus_client.workspace = true
janus_collector.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
prio = { workspace = true, features = ["multithreaded"] }
rand.workspace = true
regex = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json = { workspace = true }
testcontainers.workspace = true
tokio.workspace = true
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std", "env-filter", "fmt"] }
trillium.workspace = true
trillium-api.workspace = true
trillium-proxy = { workspace = true }
trillium-router.workspace = true
trillium-tokio.workspace = true
url.workspace = true

[dev-dependencies]
janus_core = { workspace = true, features = ["test-util", "fpvec_bounded_l2"] }
janus_interop_binaries = { path = ".", features = ["fpvec_bounded_l2", "test-util"] }
reqwest = { workspace = true, default-features = false, features = ["json"] }
