[package]
name = "janus"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.58"

[dependencies]
anyhow = "1"
base64 = "0.13.0"
chrono = "0.4"
hex = "0.4.3"
hpke-dispatch = "0.3.0"
num_enum = "0.5.6"
prio = "0.7.1"
rand = "0.8"
ring = "0.16.20"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1"
serde_json = "1.0.81"
