[package]
name = "janus_client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.58"

[dependencies]
http = "0.2.8"
janus = { path = "../janus" }
prio = "0.7.1"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0"
tokio = { version = "^1.19", features = ["full"] }
url = "2.2.2"

[dev-dependencies]
assert_matches = "1"
janus_test_util = { path = "../test_util" }
mockito = "0.31.0"
tracing = "0.1.34"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"] }
