[package]
name = "janus_client"
version = "0.1.5"
edition = "2021"
description = "Client for Janus, the server powering ISRG's Divvi Up."
documentation = "https://docs.rs/janus_client"
homepage = "https://divviup.org"
license = "MPL-2.0"
repository = "https://github.com/divviup/janus"
rust-version = "1.60"

[dependencies]
http = "0.2.8"
janus_core = { version = "0.1.4", path = "../janus_core" }
prio = "0.8.2"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0"
tokio = { version = "^1.20", features = ["full"] }
tracing = "0.1.36"
url = "2.2.2"

[dev-dependencies]
assert_matches = "1"
janus_core = { path = "../janus_core", features = ["test-util"]}
mockito = "0.31.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"] }
