[package]
name = "janus_client"
version = "0.1.24"
edition = "2021"
description = "Client for Janus, the server powering ISRG's Divvi Up."
documentation = "https://docs.rs/janus_client"
homepage = "https://divviup.org"
license = "MPL-2.0"
repository = "https://github.com/divviup/janus"
rust-version = "1.63"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
derivative = "2.2.0"
http = "0.2.8"
janus_core = { version = "0.1", path = "../janus_core" }
janus_messages = { version = "0.1", path = "../janus_messages" }
prio = { version = "0.8.2", features = ["multithreaded"] }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0"
tokio = { version = "1.22", features = ["full"] }
tracing = "0.1.37"
url = "2.3.1"

[dev-dependencies]
assert_matches = "1"
janus_core = { path = "../janus_core", features = ["test-util"]}
mockito = "0.31.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"] }
