[package]
name = "janus_core"
version = "0.1.4"
edition = "2021"
description = "Core type definitions and utilities used in various components of Janus."
documentation = "https://docs.rs/janus_core"
homepage = "https://divviup.org"
license = "MPL-2.0"
repository = "https://github.com/divviup/janus"
rust-version = "1.60"

[features]
database = ["dep:bytes", "dep:postgres-protocol", "dep:postgres-types"]
test-util = [
    "dep:assert_matches",
    "dep:futures",
    "dep:kube",
    "dep:serde_json",
    "dep:tempfile",
    "dep:tracing",
    "dep:tracing-log",
    "dep:tracing-subscriber",
    "tokio/macros",
    "tokio/sync"
]

[dependencies]
anyhow = "1"
base64 = "0.13.0"
bytes = { version = "1.2.0", optional = true }
chrono = "0.4"
hex = "0.4.3"
hpke-dispatch = "0.3.0"
kube = { version = "0.65.0", optional = true }
num_enum = "0.5.6"
postgres-protocol = { version = "0.6.4", optional = true }
postgres-types = { version = "0.2.3", optional = true }
prio = "0.8.2"
rand = "0.8"
ring = "0.16.20"
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "^1.20", features = ["rt"] }

# Dependencies required only if feature "test-util" is enabled
assert_matches = { version = "1", optional = true }
serde_json = { version = "1.0.82", optional = true }
futures = { version = "0.3.21", optional = true }
tempfile = { version = "3", optional = true }
tracing = { version = "0.1.35", optional = true }
tracing-log = { version = "0.1.3", optional = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"], optional = true }
