[package]
name = "janus_core"
version = "0.1.9"
edition = "2021"
description = "Core type definitions and utilities used in various components of Janus."
documentation = "https://docs.rs/janus_core"
homepage = "https://divviup.org"
license = "MPL-2.0"
repository = "https://github.com/divviup/janus"
rust-version = "1.63"

[features]
database = ["dep:bytes", "dep:postgres-protocol", "dep:postgres-types"]
test-util = [
    "dep:assert_matches",
    "dep:futures",
    "dep:kube",
    "dep:k8s-openapi",
    "dep:serde_json",
    "dep:tempfile",
    "dep:tracing",
    "dep:tracing-log",
    "dep:tracing-subscriber",
    "tokio/macros",
    "tokio/sync"
]

[dependencies]
anyhow = "1"
base64 = "0.13.0"
bytes = { version = "1.2.1", optional = true }
chrono = "0.4"
derivative = "2.2.0"
hex = "0.4"
hpke-dispatch = "0.3.0"
kube = { version = "0.65", optional = true, default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.13.1", optional = true, features = ["v1_20"] }  # keep this version in sync with what is referenced by the indirect dependency via `kube`
num_enum = "0.5.6"
postgres-protocol = { version = "0.6.4", optional = true }
postgres-types = { version = "0.2.4", optional = true }
prio = "0.8.2"
rand = "0.8"
ring = "0.16.20"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "^1.20", features = ["macros", "net", "rt"] }

# Dependencies required only if feature "test-util" is enabled
assert_matches = { version = "1", optional = true }
serde_json = { version = "1.0.85", optional = true }
futures = { version = "0.3.23", optional = true }
tempfile = { version = "3", optional = true }
tracing = { version = "0.1.36", optional = true }
tracing-log = { version = "0.1.3", optional = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"], optional = true }

[dev-dependencies]
hex = { version = "0.4", features = ["serde"] }  # ensure this remains compatible with the non-dev dependency
janus_core = { path = ".", features = ["test-util"] }
# Enable `kube`'s `openssl-tls` feature (which takes precedence over the
# `rustls-tls` feature when creating a default client) to work around rustls's
# lack of support for connecting to servers by IP addresses, which affects many
# Kubernetes clusters.
kube = { version = "0.65", features = ["openssl-tls"] }  # ensure this remains compatible with the non-dev dependency
