[package]
name = "janus_core"
version = "0.1.13"
edition = "2021"
description = "Core type definitions and utilities used in various components of Janus."
documentation = "https://docs.rs/janus_core"
homepage = "https://divviup.org"
license = "MPL-2.0"
repository = "https://github.com/divviup/janus"
rust-version = "1.63"

[features]
test-util = [
    "dep:assert_matches",
    "dep:lazy_static",
    "dep:kube",
    "dep:k8s-openapi",
    "dep:serde_json",
    "dep:tempfile",
    "dep:testcontainers",
    "dep:tracing-log",
    "dep:tracing-subscriber",
    "tokio/macros",
    "tokio/sync"
]

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4"
derivative = "2.2.0"
futures = "0.3.24"
hex = "0.4"
hpke-dispatch = "0.3.0"
janus_messages = { version = "0.1", path = "../janus_messages" }
kube = { version = "0.65", optional = true, default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.13.1", optional = true, features = ["v1_20"] }  # keep this version in sync with what is referenced by the indirect dependency via `kube`
prio = { version = "0.8.2", features = ["multithreaded"] }
rand = "0.8"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
ring = "0.16.20"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.21", features = ["macros", "net", "rt"] }
tracing = "0.1.36"

# Dependencies required only if feature "test-util" is enabled
assert_matches = { version = "1", optional = true }
lazy_static = { version = "1", optional = true }
serde_json = { version = "1.0.85", optional = true }
tempfile = { version = "3", optional = true }
testcontainers = { version = "0.14", optional = true }
tracing-log = { version = "0.1.3", optional = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"], optional = true }

[dev-dependencies]
hex = { version = "0.4", features = ["serde"] }  # ensure this remains compatible with the non-dev dependency
janus_core = { path = ".", features = ["test-util"] }
# Enable `kube`'s `openssl-tls` feature (which takes precedence over the
# `rustls-tls` feature when creating a default client) to work around rustls's
# lack of support for connecting to servers by IP addresses, which affects many
# Kubernetes clusters.
kube = { version = "0.65", features = ["openssl-tls"] }  # ensure this remains compatible with the non-dev dependency
mockito = "0.31.0"
url = "2.3.0"
