[package]
name = "janus_server"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.58"

[features]
tokio-console = ["console-subscriber"]
jaeger = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-jaeger"]
otlp = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp", "opentelemetry-semantic-conventions", "tonic"]

[dependencies]
anyhow = "1"
atty = "0.2"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4"
console-subscriber = { version = "0.1.4", optional = true }
deadpool-postgres = "0.10.1"
futures = "0.3.21"
hex = "0.4.3"
hpke = { version = "0.8.0", features = ["default", "std"] }
http = "0.2.7"
itertools = "0.10.3"
num_enum = "0.5.6"
opentelemetry = { version = "0.17.0", optional = true, features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.9.0", optional = true }
postgres-types = { version = "0.2.3", features = ["derive"] }
prio = { git = "https://github.com/divviup/libprio-rs", rev = "229cd9c45924c7dae3ba754a6eb46b2a05ca8451" }  # TODO(brandon): use a numbered version, once a release is cut >0.7.0
rand = "0.8"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "json"] }
ring = "0.16.20"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
serde_yaml = "0.8.23"
signal-hook = "0.3.13"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
structopt = "0.3.26"
thiserror = "1.0"
tokio = { version = "^1.18", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tonic = { version = "0.6.2", optional = true, features = ["tls", "tls-webpki-roots"] }
tracing = "0.1.34"
tracing-log = "0.1.3"
tracing-opentelemetry = { version = "0.17.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt", "json"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = {version = "1.0.0", features = ["v4"] }
warp = { version = "^0.3", features = ["tls"] }

[dev-dependencies]
assert_matches = "1"
hex = { version = "0.4.3", features = ["serde"] }
hyper = "0.14.17"
lazy_static = "1"
libc = "0.2.125"
mockito = "0.31.0"
serde_test = "1.0.137"
tempfile = "3.3.0"
testcontainers = "0.13.0"
test_util = { path = "../test_util" }
tokio = { version = "*", features = ["test-util"] }
trycmd = "0.13.4"
wait-timeout = "0.2.0"
