[package]
name = "janus_server"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.58"

[features]
tokio-console = ["console-subscriber"]
jaeger = ["tracing-opentelemetry", "opentelemetry-jaeger"]
otlp = ["tracing-opentelemetry", "opentelemetry-otlp", "opentelemetry-semantic-conventions", "tonic"]
prometheus = ["opentelemetry-prometheus", "dep:prometheus"]

[dependencies]
anyhow = "1"
atty = "0.2"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4"
console-subscriber = { version = "0.1.6", optional = true }
deadpool-postgres = "0.10.1"
derivative = "2.2.0"
futures = "0.3.21"
hex = "0.4.3"
hpke-dispatch = "0.3.0"
http = "0.2.8"
hyper = "0.14.19"
itertools = "0.10.3"
janus = { path = "../janus", features = ["database"] }
num_enum = "0.5.6"
opentelemetry = { version = "0.17.0", features = ["metrics", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10.0", optional = true, features = ["metrics"] }
opentelemetry-prometheus = { version = "0.10.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.9.0", optional = true }
postgres-types = { version = "0.2.3", features = ["derive", "array-impls"] }
prio = "0.8.0"
prometheus = { version = "0.13.1", optional = true }
rand = "0.8"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "json"] }
ring = "0.16.20"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
structopt = "0.3.26"
thiserror = "1.0"
tokio = { version = "^1.19", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "array-impls"] }
tonic = { version = "0.6.2", optional = true, features = ["tls", "tls-webpki-roots"] }
tracing = "0.1.34"
tracing-log = "0.1.3"
tracing-opentelemetry = { version = "0.17.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt", "json"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4"] }
warp = { version = "^0.3", features = ["tls"] }

[dev-dependencies]
assert_matches = "1"
hex = { version = "0.4.3", features = ["serde"] }
hyper = "0.14.19"
lazy_static = "1"
libc = "0.2.126"
mockito = "0.31.0"
serde_test = "1.0.137"
tempfile = "3.3.0"
testcontainers = "0.14.0"
janus_test_util = { path = "../test_util" }
tokio = { version = "*", features = ["test-util"] }
trycmd = "0.13.4"
wait-timeout = "0.2.0"
